test/sema/exercise/struct_in_binop.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn main(): void {
  let s = S { x: 1 };

  s + 0;
  // CHECK: [[# @LINE - 1 ]]:3: error: 'S' cannot be used as LHS operand to binary operator

  0 + s;
  // CHECK: [[# @LINE - 1 ]]:7: error: 'S' cannot be used as RHS operand to binary operator
}
